Estructura dentro de cada página

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -5,7 +5,7 @@
         <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
       </li>
       <li class="nav-item"><a class="nav-link" routerLink="/clientes">Clientes</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/articulos">Artículos</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/trabajadores">Trabajadores</a></li>
     </ul>
   </header>
 </div>
