--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,8 +1,16 @@
-<div>
-  <h1>Clientes:</h1>
-  <ol>
-    <li>Cliente1</li>
-    <li>Cliente2</li>
-  </ol>
-  <ol></ol>
+<div class="container">
+  <div class="row justify-content-around">
+    <div class="col-4">
+      <h3>Clientes:</h3>
+      <ol>
+        <!-- <li *ngFor="let cliente of clientes" [cliente]="cliente"</li> -->
+      </ol>
+    </div>
+    <div class="col-4">
+      <h3>Trabajadores:</h3>
+      <ul>
+        <!-- <li *ngFor="let trabajador of trabajadores" [trabajador]="trabajador"></li> -->
+      </ul>
+    </div>
+  </div>
 </div>
